--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -29,7 +29,7 @@ $border-radius-lg: 1rem;
 
 $container-height: 70vh;
 $container-height-vertical: 85vh;
-$container-height-vertical-small: 100vh;
+$container-height-vertical-small: 95vh;
 $container-width: 40rem;
 $container-width-big: 60rem;
 
